# sarugetchu_mm_patcher

./: .gitattributes  .gitignore  README.md  chatgpt.go  credits.yaml  data0_hashes.csv  data2_hashes.csv  flake.nix  ignored_strings.txt  main.go  pyproject.toml  resource-files.nix  stage.50_k1.font_analysis  strings.yaml  subs.yaml  test.zig
ssmm-patcher/: README.md  flake.nix  pyproject.toml
ssmm-patcher/sarugetchu_mm_patcher/: aseprite.py  chardata_editor.py  chardata_formats.py  cli.py  encoding.py  util.py
ssmm-patcher/sarugetchu_mm_patcher/scripts/: find_strings.py  keyboard_tables.py  percentage.py  strings_3c6cf60b.yaml  strings_5c272d50.yaml  strings_87f51e0c.yaml  strings_95d0e0fc.yaml  strings_aa6f7a50.yaml
ssmm-patcher/sarugetchu_mm_patcher/scripts/strings/: strings_000_1fa8a5bf.csv  strings_000_1fa8a5bf.yaml  strings_001_95d0e0fc.csv  strings_001_95d0e0fc.yaml  strings_002_bda5230a.csv  strings_002_bda5230a.yaml  strings_003_9b15f8d1.csv  strings_003_9b15f8d1.yaml  strings_004_7c6f3ace.csv  strings_004_7c6f3ace.yaml  strings_005_00911730.csv  strings_005_00911730.yaml  strings_007_3a64fa71.csv  strings_007_3a64fa71.yaml  strings_009_48014db2.csv  strings_009_48014db2.yaml  strings_010_f8b6d1e8.csv  strings_010_f8b6d1e8.yaml  strings_011_ed9d03fc.csv  strings_011_ed9d03fc.yaml  strings_012_c63a0383.csv  strings_012_c63a0383.yaml  strings_013_2c442aac.csv  strings_013_2c442aac.yaml  strings_023_8ba264d4.csv  strings_023_8ba264d4.yaml  strings_024_686865d4.csv  strings_024_686865d4.yaml  strings_027_d76848ac.csv  strings_027_d76848ac.yaml  (+532 more)
win/: README.md  (+5 more)
(+293 files in other folders)
