[tool.poetry]
name = "sarugetchu-mm-patcher"
version = "0.1.0"
description = ""
authors = ["Jasper Chan <jasperchan515@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pyyaml = "^6.0.2"
bitstring = "^4.2.3"
pillow = "^10.4.0"
pathvalidate = "^3.2.1"

[tool.poetry.scripts]
ssmm-patcher = "sarugetchu_mm_patcher.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
