[project]
name = "ssmm-patcher"
version = "0.1.0"
description = "Patch tools for Sarugetchu Million Monkeys"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitstring>=4.3.1",
    "click>=8.2.1",
    "pathvalidate>=3.2.3",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
ssmm-patcher = "sarugetchu_mm_patcher.cli:cli"
